[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/PracticeTester/ui/icons/arrow_right.png" type="Texture" id=1]
[ext_resource path="res://ObstacleCourse_Part3/PlayerCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/fonts/opensans-regular-24.tres" type="DynamicFont" id=3]
[ext_resource path="res://ObstacleCourse_Part3/UICustomizeCharacter.gd" type="Script" id=4]
[ext_resource path="res://ObstacleCourse_Part3/assets/obstacle_course_part3.theme" type="Theme" id=5]
[ext_resource path="res://addons/PracticeTester/ui/icons/arrow_left.png" type="Texture" id=6]

[node name="UICustomizeCharacter" type="Panel"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )

[node name="PlayerCharacter" parent="." instance=ExtResource( 2 )]
position = Vector2( 629, 562 )

[node name="CollisionShape2D" parent="PlayerCharacter" index="2"]
disabled = true

[node name="CollisionShape2D" parent="PlayerCharacter/Area2D" index="0"]
disabled = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PlayerCharacter"]
position = Vector2( 0, -143 )
remote_path = NodePath("../../Arrow")
update_rotation = false
update_scale = false

[node name="PlayerCharacter2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1294, 555 )

[node name="CollisionShape2D" parent="PlayerCharacter2" index="2"]
disabled = true

[node name="CollisionShape2D" parent="PlayerCharacter2/Area2D" index="0"]
disabled = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PlayerCharacter2"]
position = Vector2( 0, -143 )
update_rotation = false
update_scale = false

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 629, 419 )
rotation = 1.57079
texture = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -148.0
margin_right = 224.0
margin_bottom = 148.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="Menu"]
margin_top = 38.0
margin_right = 448.0
margin_bottom = 72.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Character customization"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Menu"]
margin_top = 80.0
margin_right = 448.0
margin_bottom = 84.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 92.0
margin_right = 448.0
margin_bottom = 142.0
alignment = 1

[node name="Label" type="Label" parent="Menu/HBoxContainer"]
margin_left = 42.0
margin_top = 7.0
margin_right = 202.0
margin_bottom = 43.0
rect_min_size = Vector2( 160, 0 )
text = "Player"

[node name="SpinBox" type="HBoxContainer" parent="Menu/HBoxContainer"]
margin_left = 206.0
margin_right = 406.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 0

[node name="ButtonLeft" type="TextureButton" parent="Menu/HBoxContainer/SpinBox"]
margin_right = 48.0
margin_bottom = 50.0
rect_min_size = Vector2( 48, 0 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="PlayerNumber" type="Label" parent="Menu/HBoxContainer/SpinBox"]
margin_left = 52.0
margin_top = 7.0
margin_right = 148.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "1"
align = 1

[node name="ButtonRight" type="TextureButton" parent="Menu/HBoxContainer/SpinBox"]
margin_left = 152.0
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 48, 0 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu"]
margin_top = 150.0
margin_right = 448.0
margin_bottom = 200.0
alignment = 1

[node name="Label" type="Label" parent="Menu/HBoxContainer3"]
margin_left = 42.0
margin_top = 7.0
margin_right = 202.0
margin_bottom = 43.0
rect_min_size = Vector2( 160, 0 )
text = "Hands pose"

[node name="HandsPoseOption" type="OptionButton" parent="Menu/HBoxContainer3"]
margin_left = 206.0
margin_right = 406.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
focus_mode = 0
mouse_default_cursor_shape = 2
text = "open"
align = 1
items = [ "open", null, false, 0, null, "closed", null, false, 1, null, "point", null, false, 2, null ]
selected = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu"]
margin_top = 208.0
margin_right = 448.0
margin_bottom = 258.0
alignment = 1

[node name="Label" type="Label" parent="Menu/HBoxContainer2"]
margin_left = 42.0
margin_top = 7.0
margin_right = 202.0
margin_bottom = 43.0
rect_min_size = Vector2( 160, 0 )
text = "Hands color"

[node name="HandsColorOption" type="OptionButton" parent="Menu/HBoxContainer2"]
margin_left = 206.0
margin_right = 406.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
focus_mode = 0
mouse_default_cursor_shape = 2
text = "red"
align = 1
items = [ "red", null, false, 0, null, "blue", null, false, 1, null, "yellow", null, false, 2, null ]
selected = 0

[editable path="PlayerCharacter"]
[editable path="PlayerCharacter2"]
